--- a/styles.css
+++ b/styles.css
@@ -6,5 +6,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  background-color: #78cde9;
+  background-color: #72e0fa;
 }
